fix(tree-grid): Change header action button alignment approach (#3984)
* fix tree grid header action alignment approach

* make exception for header action in tree grid specific buttons

--- a/ui/components/tree-grid/base/_index.scss
+++ b/ui/components/tree-grid/base/_index.scss
@@ -30,8 +30,12 @@
 
   .slds-button {
     align-self: center;
-    margin-top: 0;
+
+    &:not(.slds-th__action-button) {
+      margin-top: 0;
+    }
   }
+
 
   // This is only going 20 levels deep for now -- it may have to be expanded later if people are building deep deep trees.
   $max-nesting-depth: 20 !default;
